se avanzó con las tipo de paginas que se ofrecen y las competencias

--- a/src/app/content/competencias/competencias.component.html
+++ b/src/app/content/competencias/competencias.component.html
@@ -51,40 +51,65 @@
                                 <h2>4</h2>
                             </div>
                         </div>
-                        <div class="col-6 mb-4 mt-4">
+                        <div class="col-12 mb-4 mt-4">
                             <div class="center">
                                 <p class="lead">Empresas en las que he desarrollado</p>
                                 <div class="row">
-                                    <div class="col-6">
+                                    <div class="col-3">
                                         <a href="https://socius.cl/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/socius.jpg" alt="Socius Arquitectura y Plataformas Tecnológicas">
                                         </a>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-3">
                                         <a href="https://jumpitt.com/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/jumpitt.png" alt="Jumpitt, We Think Different.">
                                         </a>
                                     </div>
-                                    <div class="col-6">
-                                        <a href="https://santander.cl/" class="imgredir">
+                                    <div class="col-3">
+                                        <a href="https://amsoft.cl/" class="imgredir">
                                             <img    class="maxh100"
-                                                    src="../../../assets/img/santander.png" alt="Banco Santander (Cliente de Socius)">
+                                                    src="../../../assets/img/amsoft_logo.jpeg" alt="Soluciones tecnológicas que impulsan tu negocio.">
                                         </a>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-3">
+                                        <a href="https://ibm.com/" class="imgredir">
+                                            <img    class="maxh100"
+                                                    src="../../../assets/img/ibm.svg" alt="THINK">
+                                        </a>
+                                    </div>
+                                    <div class="col-3">
+                                        <a href="https://banco.santander.cl/" class="imgredir">
+                                            <img    class="maxh100"
+                                                    src="../../../assets/img/santander.png" alt="Porque tú, porque té">
+                                        </a>
+                                    </div>
+                                    <div class="col-3">
                                         <a href="https://origon.io/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/origon.png" alt="Origon - Ecosistema Digital de Negocios">
                                         </a>
                                     </div>
+                                    <!-- zurich -->
+                                    <div class="col-3">
+                                        <a href="https://www.zurich.cl/" class="imgredir">
+                                            <img    class="maxh100"
+                                                    src="../../../assets/img/zurich.jpeg" alt="Zurich Seguros">
+                                        </a>
+                                    </div>
+                                    <div class="col-3">
+                                        <a href="https://vidasecurity.cl/" class="imgredir">
+                                            <img    class="maxh100"
+                                                    src="../../../assets/img/vida_security_logo.jpeg" alt="Protección y seguridad para tu futuro​​">
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 mb-4 mt-5">
+                        <div class="col-12 mb-4 mt-5">
                             <div class="center">
-                                <a href="../../../assets/files/CVPRIETO-2022.pdf" download="CV Pablo J Prieto" class="btn-block">Descargar CV</a>
+                                <a href="../../../assets/files/prieto-cv-04-11-2024.pdf" download="CV Pablo J Prieto" class="btn-block">Descargar CV</a>
                             </div>
                         </div>
                     </div>
