--- a/src/app/content/competencias/competencias.component.css
+++ b/src/app/content/competencias/competencias.component.css
@@ -47,12 +47,15 @@ a {
     text-decoration: none;
     object-fit: cover;
     margin: 10px;
+
 }
 
 .maxh100 {
-    max-height: 100px;
+    height: 100px;
+    max-width: 100px;
+    object-fit: cover;
 }
 
-.col-6 {
+.col-3 {
     margin-top: 20px;
 }
