--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.css
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.css
@@ -56,3 +56,20 @@ div.triangle {
     gap: 1rem;
     background-color: transparent;
 }
+
+.chip {
+    padding: 0;
+}
+
+.chip-button {
+    width: 100%;
+    height: 100%;
+    padding: 0 1rem;
+}
+
+.chip-description { 
+    background-color: white;
+    padding: 20px;
+    margin: 30px auto;
+    max-width: 700px;
+}
