se quita la wea fea bugeada

--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.css
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.css
@@ -25,9 +25,12 @@ div.justify {
 
 #imagen {
     clip-path: polygon(0 8%, 100% 0%, 100% 91%, 0% 100%);
-    height: 30rem;
+    min-height: 30rem;
     background-image: url(../../../assets/img/background.webp);
     background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 strong {
@@ -46,7 +49,11 @@ div.triangle {
 
 #container {
     position: relative;
-    max-width: 100%;
+    max-width: 700px;
+    background-color: #000000b6;
+    padding: 50px;
+    margin: 80px auto;
+    clip-path: polygon(0 4%, 100% 0, 100% 96%, 0 100%);
 }
 
 .chips {
@@ -72,4 +79,5 @@ div.triangle {
     padding: 20px;
     margin: 30px auto;
     max-width: 700px;
+    clip-path: polygon(0 4%, 100% 0, 100% 96%, 0 100%);
 }
