--- a/src/app/content/quienchuchasoy/quienchuchasoy.component.html
+++ b/src/app/content/quienchuchasoy/quienchuchasoy.component.html
@@ -1,63 +1,56 @@
 <section id="aboutme">
-    <div class="container" id="container" #container>
-        <div class="triangle" [style.top]="posY + 'px'" [style.left]="posX + 'px'"
-            [style.transform]="'rotate('+ rotation +'deg)'" [style.clip-path]="poligon" [style.height]="height + 'px'"
-            [style.width]="width + 'px'"></div>
-        <hr>
-        <div class="center">
-            <h3 class="text-white">Transformamos tus ideas o problemas en soluciones tecnológicas</h3>
-            <mat-chip-list aria-label="Dog selection" class="chips">
-                <mat-chip class="chip" [disabled]="chip == 1">
-                    <button class="chip-button" (click)="chip = 1" [disabled]="chip == 1">
-                        📄
-                        Landing Pages
-                    </button>
-                </mat-chip>
-                <mat-chip class="chip" [disabled]="chip == 2">
-                    <button class="chip-button" (click)="chip = 2" [disabled]="chip == 2">
-                        🌐
-                        Páginas Web
-                    </button>
-                </mat-chip>
-                <mat-chip class="chip" [disabled]="chip == 3">
-                    <button class="chip-button" (click)="chip = 3" [disabled]="chip == 3">
-                        🚀
-                    Aplicaciones Web
-                    </button>
-                </mat-chip>
-            </mat-chip-list>
-            <div class="chip-description" *ngIf="chip == 1">
-                <q>Captura la atención y convierte visitas en clientes.</q>
-                <p class="lead">
-                    Creamos landing pages personalizadas, diseñadas desde cero para alinear con los objetivos de tu campaña. 
-                    Cada línea de código es escrita a medida, sin el uso de plantillas prediseñadas o CMS como WordPress, 
-                    lo que nos permite optimizar la página para una velocidad de carga ultrarrápida y una experiencia de usuario fluida.
-                    Nos enfocamos en maximizar la conversión de tus visitantes a clientes.
-                </p>
-            </div>
-            <div class="chip-description" *ngIf="chip == 2">
-                <q>Sitios web únicos, rápidos y optimizados.</q>
-                <p class="lead">
-                    Desarrollamos sitios web completos y personalizados, adaptados a las necesidades específicas de tu marca. 
-                    Cada proyecto es construido con código propio para garantizar un rendimiento superior y una apariencia única que te diferencie de la competencia. 
-                    Al no utilizar CMS preconfigurados como WordPress, logramos un sitio optimizado y enfocado en la velocidad y seguridad, 
-                    perfecto para ofrecer una experiencia sin interrupciones a tus usuarios.
-                </p>
-            </div>
-            <div class="chip-description" *ngIf="chip == 3">
-                <q>Aplicaciones escalables y eficaces para tus necesidades específicas.</q>
-                <p class="lead">
-                    Construimos aplicaciones web hechas a medida que se adaptan a las funcionalidades exactas que tu negocio necesita. 
-                    Nuestra metodología de desarrollo sin plataformas como WordPress permite un control total sobre el rendimiento y la escalabilidad. 
-                    Cada aplicación es optimizada para velocidad y eficiencia, asegurando una experiencia de usuario rápida y confiable, 
-                    sin importar el nivel de complejidad de las funciones que desees incluir.
-                </p>
+    <div id="imagen">
+        <div class="container" id="container" #container>
+            <div class="center">
+                <h3 class="text-white">Transformamos tus ideas o problemas en soluciones tecnológicas</h3>
+                <mat-chip-list aria-label="Dog selection" class="chips">
+                    <mat-chip class="chip" [disabled]="chip == 1">
+                        <button class="chip-button" (click)="chip = 1" [disabled]="chip == 1">
+                            📄
+                            Landing Pages
+                        </button>
+                    </mat-chip>
+                    <mat-chip class="chip" [disabled]="chip == 2">
+                        <button class="chip-button" (click)="chip = 2" [disabled]="chip == 2">
+                            🌐
+                            Páginas Web
+                        </button>
+                    </mat-chip>
+                    <mat-chip class="chip" [disabled]="chip == 3">
+                        <button class="chip-button" (click)="chip = 3" [disabled]="chip == 3">
+                            🚀
+                            Aplicaciones Web
+                        </button>
+                    </mat-chip>
+                </mat-chip-list>
+                <div class="chip-description" *ngIf="chip == 1">
+                    <q>Captura la atención y convierte visitas en clientes.</q>
+                    <p class="lead">
+                        Creamos landing pages personalizadas, diseñadas desde cero para alinear con los objetivos de tu campaña. 
+                        Cada línea de código es escrita a medida, sin el uso de plantillas prediseñadas o CMS como WordPress, 
+                        lo que nos permite optimizar la página para una velocidad de carga ultrarrápida y una experiencia de usuario fluida.
+                        Nos enfocamos en maximizar la conversión de tus visitantes a clientes.
+                    </p>
+                </div>
+                <div class="chip-description" *ngIf="chip == 2">
+                    <q>Sitios web únicos, rápidos y optimizados.</q>
+                    <p class="lead">
+                        Desarrollamos sitios web completos y personalizados, adaptados a las necesidades específicas de tu marca. 
+                        Cada proyecto es construido con código propio para garantizar un rendimiento superior y una apariencia única que te diferencie de la competencia. 
+                        Al no utilizar CMS preconfigurados como WordPress, logramos un sitio optimizado y enfocado en la velocidad y seguridad, 
+                        perfecto para ofrecer una experiencia sin interrupciones a tus usuarios.
+                    </p>
+                </div>
+                <div class="chip-description" *ngIf="chip == 3">
+                    <q>Aplicaciones escalables y eficaces para tus necesidades específicas.</q>
+                    <p class="lead">
+                        Construimos aplicaciones web hechas a medida que se adaptan a las funcionalidades exactas que tu negocio necesita. 
+                        Nuestra metodología de desarrollo sin plataformas como WordPress permite un control total sobre el rendimiento y la escalabilidad. 
+                        Cada aplicación es optimizada para velocidad y eficiencia, asegurando una experiencia de usuario rápida y confiable, 
+                        sin importar el nivel de complejidad de las funciones que desees incluir.
+                    </p>
+                </div>
             </div>
         </div>
-        <hr>
     </div>
-</section>
-
-<section id="imagen">
-
 </section>
