--- a/src/styles.css
+++ b/src/styles.css
@@ -38,5 +38,9 @@ button {
 }
 
 
-html, body { height: 100%; }
+html, body { 
+  max-width: 100%;
+  height: 100%; 
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
