--- a/src/app/content/competencias/competencias.component.html
+++ b/src/app/content/competencias/competencias.component.html
@@ -1,7 +1,7 @@
 <section id="competencias">
     <div class="container">
         <div class="center">
-            <h2>Competencias</h2>
+            <h2>Perfil profesional del desarrollador</h2>
             <div class="row">
                 <div class="col-xl-6 col-lg-6-col-md-12 col-sm-12">
                     <p class="lead">HTML5</p>
@@ -36,69 +36,73 @@
                     <div class="progress">
                         <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
+                    <p class="lead">Docker</p>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
                 </div>
                 <div class="col-xl-6 col-lg-6-col-md-12 col-sm-12">
                     <div class="row p-4">
                         <div class="col-6 mb-4">
                             <div class="center">
-                                <p class="lead">Desarrollando desde</p>
+                                <p class="lead text-center">Desarrollando desde</p>
                                 <h2>2019</h2>
                             </div>
                         </div>
                         <div class="col-6 mb-4">
                             <div class="center">
-                                <p class="lead">Trabajos realizados con éxito</p>
-                                <h2>4</h2>
+                                <img src="../../../assets/img/IMG_5982.png" alt="Pablo Prieto Cepeda, desarrollador web" class="fotoperfil">
+                                <h2>Pablo</h2>
                             </div>
                         </div>
                         <div class="col-12 mb-4 mt-4">
                             <div class="center">
-                                <p class="lead">Empresas en las que he desarrollado</p>
+                                <p class="lead">Empresas donde he dejado de mi código</p>
                                 <div class="row">
-                                    <div class="col-3">
+                                    <div class="col-xl-3 col-md-3 col-sm-6 col-6 center2">
                                         <a href="https://socius.cl/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/socius.jpg" alt="Socius Arquitectura y Plataformas Tecnológicas">
                                         </a>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-xl-3 col-md-3 col-sm-6 col-6 center2">
                                         <a href="https://jumpitt.com/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/jumpitt.png" alt="Jumpitt, We Think Different.">
                                         </a>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-xl-3 col-md-3 col-sm-6 col-6 center2">
                                         <a href="https://amsoft.cl/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/amsoft_logo.jpeg" alt="Soluciones tecnológicas que impulsan tu negocio.">
                                         </a>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-xl-3 col-md-3 col-sm-6 col-6 center2">
                                         <a href="https://ibm.com/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/ibm.svg" alt="THINK">
                                         </a>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-xl-3 col-md-3 col-sm-6 col-6 center2">
                                         <a href="https://banco.santander.cl/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/santander.png" alt="Porque tú, porque té">
                                         </a>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-xl-3 col-md-3 col-sm-6 col-6 center2">
                                         <a href="https://origon.io/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/origon.png" alt="Origon - Ecosistema Digital de Negocios">
                                         </a>
                                     </div>
                                     <!-- zurich -->
-                                    <div class="col-3">
+                                    <div class="col-xl-3 col-md-3 col-sm-6 col-6 center2">
                                         <a href="https://www.zurich.cl/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/zurich.jpeg" alt="Zurich Seguros">
                                         </a>
                                     </div>
-                                    <div class="col-3">
+                                    <div class="col-xl-3 col-md-3 col-sm-6 col-6 center2">
                                         <a href="https://vidasecurity.cl/" class="imgredir">
                                             <img    class="maxh100"
                                                     src="../../../assets/img/vida_security_logo.jpeg" alt="Protección y seguridad para tu futuro​​">
@@ -112,6 +116,35 @@
                                 <a href="../../../assets/files/prieto-cv-04-11-2024.pdf" download="CV Pablo J Prieto" class="btn-block">Descargar CV</a>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="why-us">
+    <div class="image">
+        <div class="container">
+            <div class="center">
+                <h2>¿Por qué elegir pavlo.cl?</h2>
+                <br>
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                        <h2 class="lead">Desarrollo a medida</h2>
+                        <p class="lead">Cada proyecto es único y se desarrolla desde cero, sin el uso de plantillas predefinidas o CMS como WordPress. Esto permite una mayor flexibilidad y personalización, así como un rendimiento superior y una experiencia de usuario más fluida.</p>
+                        <h2 class="lead">Optimización de la velocidad</h2>
+                        <p class="lead">Todos los sitios web y aplicaciones que desarrollo están optimizados para una velocidad de carga ultrarrápida. Esto no solo mejora la experiencia del usuario, sino que también tiene un impacto positivo en el posicionamiento en los motores de búsqueda.</p>
+                        <h2 class="lead">Diseño responsive</h2>
+                        <p class="lead">Todos los proyectos que desarrollo están diseñados para ser completamente responsive, lo que significa que se verán y funcionarán perfectamente en cualquier dispositivo, ya sea un teléfono móvil, una tableta, una computadora portátil o un escritorio.</p>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                        <h2 class="lead">Experiencia y conocimientos</h2>
+                        <p class="lead">Con más de 5 años de experiencia en el desarrollo web y una amplia gama de habilidades y conocimientos técnicos, puedo ofrecer soluciones tecnológicas efectivas y eficientes para cualquier tipo de proyecto.</p>
+                        <h2 class="lead">Atención personalizada</h2>
+                        <p class="lead">Trabajo directamente con mis clientes para comprender sus necesidades y objetivos, y me aseguro de que estén completamente satisfechos con el resultado final. La comunicación abierta y transparente es fundamental para mí.</p>
+                        <h2 class="lead">Soporte continuo</h2>
+                        <p class="lead">Ofrezco soporte continuo y mantenimiento para todos los proyectos que desarrollo, para garantizar que sigan funcionando sin problemas y estén siempre actualizados. Estoy aquí para ayudarte en cada paso del camino.</p>
                     </div>
                 </div>
             </div>
