--- a/src/app/content/trabajos/trabajos.component.html
+++ b/src/app/content/trabajos/trabajos.component.html
@@ -1,24 +1,20 @@
 <section id="trabajos">
     <div class="container">
-        <div class="content animate__animated animate__pulse animate__infinite">
+        <div class="content">
             <div class="center">
                 <h2>Mis Trabajos</h2>
                 <div class="row">
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-4">
-                        <a href="" class="btn-trabajos btn btn-block">EzPeasy</a>
+                        <a href="https://funeralescubillosvina.cl" class="btn-trabajos btn btn-block ok" >Funerales Cubillos Viña</a>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-4">
-                        <a href="" class="btn-trabajos btn btn-block">Prorums</a>
+                        <a class="btn-trabajos btn btn-block no">Prorums (private)</a>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 mb-4">
-                        <a href="" class="btn-trabajos btn btn-block">CreativePrices</a>
+                        <a class="btn-trabajos btn btn-block no">CreativePrices (private)</a>
                     </div>
                 </div>
-                <span class="text-white">Lamento decirte que ninguno de los trabajos propios de arriba están online :(</span>
             </div>
-        </div>
-        <div class="center">
-            <h2>Experiencia Laboral</h2>
         </div>
 <br>
     </div>
