--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -15,3 +15,8 @@ a.text-sm-center {
     color: white;
 }
 
+.nav-link:hover {
+    color: white;
+    transform: scale(1.1);
+    transition: .3s ease;
+}
