--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
           <div class="introduction">
               <h1 class="text-center text-white xd animate__animated animate__fadeInRight animate__fast">¿Necesitas una página web?</h1>
               <div class="animate_pulse animate__infinite">
-                <h1 class="text-center text-white animate__animated animate__zoomInUp"><code>< Tenemos la solución al problema que tengas /></code></h1>
+                <h1 class="text-center text-white animate__animated animate__zoomInUp"><code>< Tenemos la solución al problema que tengas jamon /></code></h1>
               </div>
           </div>
       </div>
